--- a/jupyter/input.ipynb
+++ b/jupyter/input.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,8 +40,8 @@
      "output_type": "stream",
      "text": [
       "あなたの名前を教えてください。\n",
-      ">> yoshi\n",
-      "こんにちは！ yoshi さん！\n"
+      ">> yoshii\n",
+      "こんにちは！ yoshii さん！\n"
      ]
     }
    ],
